# rust-yt-dl

./: .env  .gitignore  Cargo.toml  Config.toml  Rocket.toml  dl.db  readme.md
examples/: confy_test.rs  file_test.rs  m1907.rs  process_test.rs  regex_test.rs  test.rs
migrations/2021-02-01-134414_user/: up.sql
migrations/2021-02-01-140819_dl_list/: up.sql
migrations/2021-02-03-134454_dl_info/: down.sql  up.sql
resources/: youtube-dl-
resources/static/js/validate/: messages_zh.min.js
resources/templates/: index.html.tera  list.html.tera  list_a.html.tera  login.html.tera
resources/templates/include/: footer.html.tera  nav.html.tera
src/: config.rs  dict.rs  lib.rs  main.rs  models.rs  schema.rs
src/controller/: index.rs  list.rs  login.rs  static_files.rs  user.rs
src/controller/frontend/: user.rs
src/request/: authenticated_user.rs  request_user.rs  user_request.rs
src/resource/css/: bootstrap.min.css  main.css
src/response/: demo.rs
src/templates/: hello.html.tera  index.html.tera  list.html.tera  list_a.html.tera  login.html.tera
src/templates/include/: footer.html.tera  header.html.tera  nav.html.tera
src/util/: file_util.rs  template_util.rs
src/view_model/: login_form.rs  login_resp.rs
templates/: login.html.tera
