[package]
name = "rust-yt-dl"
version = "0.1.0"
authors = ["skyline <skyline661@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.4.6", default-features = true, features = ["private-cookies"] }
rocket_codegen = "0.4.6"
rocket_contrib = { version = "0.4.6", default-features = false, features = ["json", "serde_json", "serve", "handlebars_templates", "tera_templates", "diesel_sqlite_pool"] }
diesel = "1.4"

#序列化库
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
#日期库
chrono = { version = "0.4", features = ["serde"] }
#uuid
uuid = { version = "0.8", features = ["serde", "v4"] }
#模板引擎
#askama = { version = "0.10", default-features = false, features = ["with-rocket", "mime", "mime_guess"] }
rust-embed = "5.9.0"

#配置文件库
confy = "0.4.0"

#静态变量，初始化
lazy_static = { version = "1.0" }
